# Pers_learning_py

./: .gitignore  CMakeLists.txt  README.md  greeter_client.py  java.java  main.cpp
KSC/hello_cmd/: CMakeLists.txt  main.cpp
KSC/hello_fltk/: CMakeLists.txt  main.cpp
KSC/hello_iofile/: CMakeLists.txt  main.cpp  readme.md
KSC/hello_zmq_pub/: CMakeLists.txt  main.cpp
KSC/hello_zmq_sub/: CMakeLists.txt  main.cpp
Practice/: hello_world.cpp  map.cpp  map.md  map_practice.cpp  map_test.cpp  vector.cpp  vector_practice.cpp
da/: chi2_kernel.py
grpc/: 1.md
history/: helloworld.cpp
json/: 2.py  3.py  hello_json.py  ota.json
pl_simpleini/: itoa.txt  main.cpp  netaddress.txt  test.ini
